# noaa-weather-hourly

./: README.md  pyproject.toml  requirements.txt  setup.py
dev/: README.md Editor.ipynb  noaa-weather-hourly.ipynb
noaa-weather-hourly/: ISD History Station Table.py  __main__.py  config.py  main.py  noaa-weather-hourly.py  utils.py
noaa-weather-hourly/data/: isd-history.csv  isd_history_defintions.txt  test_file_lcd1.csv  test_file_lcd2.csv
noaa_weather_hourly/: __main__.py  config.py
noaa_weather_hourly/data/: isd-history.csv
