[tool.poetry]
name = "noaa_weather_hourly"
version = "0.1.0"
description = ""
authors = ["Matt Chmielewski <43832628+emskiphoto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
noaa_weather_hourly = "noaa_weather_hourly.__main__:__main__"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
